<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.zybooks.pizzaparty.MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textSize="25sp"
        android:text="First Name:"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="John"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textSize="25sp"
        android:text="Last Name:"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="Smith"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="# of folks?"
        android:fontFamily="casual"
        android:textSize="25sp"
        android:labelFor="@id/num_attend_edit_text" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no"
        android:hint="20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="How hungry?"
        android:fontFamily="casual"
        android:textSize="25sp"
        android:labelFor="@id/hungry_radio_group" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/i_m_dieting_radio_button"
            android:text="@string/i_m_dieting"
            android:textSize="12sp"
            android:fontFamily="casual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id = "@+id/i_got_the_munchies"
            android:text="@string/i_got_the_munchies"
            android:fontFamily="casual"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id = "@+id/i_m_pretty_hungry"
            android:text="@string/i_m_pretty_hungry"
            android:textSize="12sp"
            android:fontFamily="casual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/aight_where_s_my_food"
            android:text="@string/aight_where_s_my_food"
            android:fontFamily="casual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/i_am_famished"
            android:text="@string/i_am_famished"
            android:fontFamily="casual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <TextView
            android:id="@+id/num_pizzas_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Total pizzas: 20"
            android:fontFamily="casual"
            android:textSize="24sp" />
    </RadioGroup>
    <Button
        android:id="@+id/calc_button"
        android:text="Rolling Dough "
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick" />
</LinearLayout>
    </ScrollView>